--- a/_config.yml
+++ b/_config.yml
@@ -280,9 +280,9 @@ compress_html:
 # Defaults
 defaults:
   # _posts
-  - scope:
+    - scope:
       path: ""
-      type: posts
+      type: pages
     values:
       layout: single
       author_profile: true
