--- a/_config.yml
+++ b/_config.yml
@@ -280,9 +280,9 @@ compress_html:
 # Defaults
 defaults:
   # _posts
-    - scope:
+  - scope:
       path: ""
-      type: pages
+      type: posts
     values:
       layout: single
       author_profile: true
@@ -292,7 +292,7 @@ defaults:
       related: true
 
   # _pages
-    - scope:
+  - scope:
       path: ""
       type: pages
     values:
