--- a/_config.yml
+++ b/_config.yml
@@ -107,7 +107,7 @@ author:
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Events made simple."
   location         : "Central Coast, NSW"
-  email            :
+  email            : "test@email.com"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
