--- a/_data/ui-text.yml
+++ b/_data/ui-text.yml
@@ -78,7 +78,7 @@ es: &DEFAULT_ES
   feed_label                 : "Feed"
   powered_by                 : "Powered by"
   website_label              : "Sitio web"
-  email_label                : "Email"
+  email_label                : "test@email.com"
   recent_posts               : "Entradas recientes"
   undefined_wpm              : "Parametro words_per_minute (Palabras por minuto) no definido en _config.yml"
   comment_form_info          : "Su dirección de correo no será publicada. Se han resaltado los campos requeridos"
@@ -216,7 +216,7 @@ pt: &DEFAULT_PT
   feed_label                 : "Feed"
   powered_by                 : "Feito com"
   website_label              : "Site"
-  email_label                : "Email"
+  email_label                : "test@email.com"
   recent_posts               : "Artigos Recentes"
   undefined_wpm              : "Parâmetro words_per_minute não definido em _config.yml"
   comment_form_info          : "O seu endereço email não será publicado. Os campos obrigatórios estão assinalados"
