--- a/_config.yml
+++ b/_config.yml
@@ -14,10 +14,10 @@ baseurl: ""
 # Of course don't forget to change the username and projectname to YOUR username and project
 
 # Name of website
-title: My website
+title: Wolf and Boy Events
 
 # Short description of your site
-description: A virtual proof that name is awesome!
+description: Events made simple.
 
 # --- Navigation bar options --- #
 
