--- a/_config.yml
+++ b/_config.yml
@@ -115,6 +115,7 @@ author:
       # url: mailto:your.name@email.com
     - label: "Phone: 040430540"
       icon: "fas fa-fw fa-link"
+      url: "040430540"
       # url: "https://your-website.com"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
