--- a/_config.yml
+++ b/_config.yml
@@ -114,7 +114,7 @@ author:
       url: mailto:test@gmail.com
       # url: mailto:your.name@email.com
     - label: "Phone: 040430540"
-      icon: "fas fa-fw fa-phone"
+      icon: "fas fa-fw fa-phone-square"
       url: "040430540"
       # url: "https://your-website.com"
     - label: "Twitter"
