--- a/_config.yml
+++ b/_config.yml
@@ -113,7 +113,7 @@ author:
       icon: "fas fa-fw fa-envelope-square"
       url: mailto:test@gmail.com
       # url: mailto:your.name@email.com
-    - label: "Phone: 040430540"
+    - label: "040430540"
       icon: "fas fa-fw fa-phone-square"
       url: "040430540"
       # url: "https://your-website.com"
