--- a/_config.yml
+++ b/_config.yml
@@ -110,11 +110,11 @@ author:
   email            :
   links:
     - label: "test@gmail.com"
-      icon: "fas fa-fw fa-envelope-square"
+      icon: "fas fa-fw fa-envelope"
       url: mailto:test@gmail.com
       # url: mailto:your.name@email.com
     - label: "040430540"
-      icon: "fas fa-fw fa-phone-square"
+      icon: "fas fa-fw fa-phone"
       url: "040430540"
       # url: "https://your-website.com"
     - label: "Twitter"
