--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,10 +2,11 @@
 main:
   - title: "About"
     url: /about/
+  - title: "Services"
+    url: /services/
   - title: "Contact"
     url: /contact/
-  - title: "More"
-    url: /more/
+
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
