--- a/docs/_data/ui-text.yml
+++ b/docs/_data/ui-text.yml
@@ -21,8 +21,8 @@ en: &DEFAULT_EN
   comments_label             : "Leave a comment"
   comments_title             : "Comments"
   more_label                 : "Learn more"
-  related_label              : "You may also enjoy"
-  follow_label               : "Follow:"
+  related_label              : ""
+  follow_label               : "Contact:"
   feed_label                 : "Feed"
   powered_by                 : "Powered by"
   website_label              : "Website"
