--- a/_data/ui-text.yml
+++ b/_data/ui-text.yml
@@ -27,7 +27,7 @@ en: &DEFAULT_EN
   powered_by                 : "Powered by"
   website_label              : "Website"
   email_label                : "Email"
-  recent_posts               : "Striving to make your next event one to remember."
+  recent_posts               : "Save $100 on your next event!"
   undefined_wpm              : "Undefined parameter words_per_minute at _config.yml"
   comment_form_info          : "Your email address will not be published. Required fields are marked"
   comment_form_comment_label : "Comment"
